BOM the build